--- a/styles.css
+++ b/styles.css
@@ -24,4 +24,12 @@
     border: 1px solid #888;
     width: 400px;
   }
-  
+  ul{
+    list-style-type: none;
+  }
+  .project-title{
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 1rem;
+    border: 2px solid black;
+  }
