--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=REM&display=swap');
 *{
-    /* padding: 0;
-    margin: 0; */
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
+font-family: 'REM', sans-serif;
+}
+nav{
+        padding: 1.5rem 0;
+        border-bottom: 1.5px solid lightgray;
+}
+.nav__title{
+    font-size: 2rem;
+    text-align: center;
+    
 }
 /* Modal Styles */
 .modal {
@@ -31,5 +42,24 @@
     font-size: 2rem;
     text-align: center;
     margin-bottom: 1rem;
-    border: 2px solid black;
+  }
+  .app-container{
+    display: flex;
+    height: 100vh;
+  }
+  .left-panel{
+    width: 350px;
+    padding: 2rem;
+  }
+  .right-panel{
+    flex: 1;
+    padding: 2rem;
+    background-color: whitesmoke;
+  }
+  button{
+    padding: 0.2rem 1rem;
+    border-radius: 1rem;
+    margin: 2px;    
+    border: 2px solid grey ;
+    outline: none;
   }
