--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ nav{
     text-align: center;
     
 }
+
+/* Hide the form initially */
+.hidden {
+    display: none;
+  }
+  
 /* Modal Styles */
 .modal {
     display: none;
@@ -40,7 +46,6 @@ nav{
   }
   .project-title{
     font-size: 2rem;
-    text-align: center;
     margin-bottom: 1rem;
   }
   .app-container{
