--- a/styles.css
+++ b/styles.css
@@ -28,15 +28,15 @@ body {
 
 /* Styling for the navigation bar */
 nav {
-  padding: 1.5rem 0;
-  border-bottom: 1.5px solid lightgray;
-  background-color: #de483a;
-  color: #fff;
+  padding: 1rem 0;
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);  color: #fff;
 }
 
 .nav__title {
   font-size: 2rem;
   padding: 0 2rem;
+  font-weight: 800;
+  letter-spacing: 2px;
 }
 
 /* Hide the form initially */
@@ -97,7 +97,7 @@ li:hover {
 .left-panel {
   width: 325px;
   padding: 2rem;
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.556);
 }
 
 /* Right Panel Styles */
@@ -171,7 +171,7 @@ button[type="submit"]:hover {
 }
 /* Todo Item Styles */
 .todo-item {
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.725);
   padding: 1rem;
   border-radius: 0.2rem;
   justify-content: space-between;
